@@ -190,7 +190,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static java.time.LocalDate.now;
@@ -690,6 +689,7 @@ public class CaseDataBuilder {
     private String claimantBilingualLanguagePreference;
     private JudgmentPaidInFull judgmentPaidInFull;
     private YesOrNo anyRepresented;
+    protected YesOrNo setRequestDJDamagesFlagForWA;
 
     private String partialPaymentAmount;
 
@@ -1950,6 +1950,11 @@ public class CaseDataBuilder {
 
     public CaseDataBuilder takenOfflineByStaffDate(LocalDateTime takenOfflineByStaffDate) {
         this.takenOfflineByStaffDate = takenOfflineByStaffDate;
+        return this;
+    }
+
+    public CaseDataBuilder setRequestDJDamagesFlagForWA(YesOrNo setRequestDJDamagesFlagForWA) {
+        this.setRequestDJDamagesFlagForWA = setRequestDJDamagesFlagForWA;
         return this;
     }
 
@@ -5492,8 +5497,13 @@ public class CaseDataBuilder {
         return this;
     }
 
-    public CaseDataBuilder getGeneralApplicationWithStrikeOut(final String litigiousPartyID) {
-        List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+    public CaseDataBuilder generalApplications() {
+        this.generalApplications = new ArrayList<>();
+        return this;
+    }
+
+    public CaseDataBuilder getGeneralApplicationWithStrikeOut(final String litigiousPartyID, YesOrNo isParentClaimantIsApplicant) {
+        List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
         List<Element<GeneralApplication>> generalApplicationValues = wrapElements(
             GeneralApplication.builder()
                 .applicantPartyName("partyName")
@@ -5503,7 +5513,7 @@ public class CaseDataBuilder {
                 .generalAppType(GAApplicationType.builder()
                     .types(types)
                     .build())
-
+                .parentClaimantIsApplicant(isParentClaimantIsApplicant)
                 .caseLink(CaseLink.builder().caseReference("12345678").build())
                 .businessProcess(BusinessProcess.builder()
                     .camundaEvent("NotifyRoboticsOnCaseHandedOffline")
@@ -7977,6 +7987,7 @@ public class CaseDataBuilder {
             .joJudgmentPaidInFull(judgmentPaidInFull)
             .anyRepresented(anyRepresented)
             .partialPaymentAmount(partialPaymentAmount)
+            .setRequestDJDamagesFlagForWA(setRequestDJDamagesFlagForWA)
             .build();
     }
 
